# click2mask

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
docker/: Dockerfile  docker-compose.yml
src/click2mask/: main.py
src/click2mask/models/: inference.py
templates/: coordinate_display.html  index.html  mask_result.html  upload.html
